Card project finished

--- a/style.css
+++ b/style.css
@@ -4,30 +4,11 @@
     box-sizing: border-box;
 }
 
-/* .custom_btn {
-    background-color: #03fcc6;
-    border: 1px solid #36e0bb;
-    transition: 0.5s;
+.footer_link {
+    color: black;
+    text-decoration: none;
 }
 
-.custom_btn:hover {
-    background-color: #03e7fc;
-    border: 1px solid #36e0bb;
-} */
-
-.box {
-    width: 100px;
-    height: 100px;
-}
-
-.box:nth-child(1) {
-    background-color: red;
-}
-
-.box:nth-child(2) {
-    background-color: green;
-}
-
-.box:nth-child(3) {
-    background-color: blue;
+.footer_link:hover {
+    color: rgb(77, 72, 72);
 }
